tests/baselines/reference/importFromDot.errors.txt
a/b.ts(1,20): error TS2305: Module '"."' has no exported member 'rootA'.


==== a.ts (0 errors) ====
    export const rootA = 0;
    
==== a/index.ts (0 errors) ====
    export const indexInA = 0;
    
==== a/b.ts (1 errors) ====
    import { indexInA, rootA } from ".";
                       ~~~~~
!!! error TS2305: Module '"."' has no exported member 'rootA'.
    